# nextgentrader

./: .env.example  AGENTS.local.md  AGENTS.md  README.md  Taskfile.yaml  aps.lock.yaml  main.py  pyproject.toml  release-please-config.json
.github/workflows/: release-please.yml
.trunk/: trunk.yaml
alembic/: env.py
alembic/versions/: 20260217221407_create_positions_table.py  20260218000000_add_accounts_table.py  20260219090000_add_orders_and_order_events_tables.py  20260219100000_add_jobs_table.py  20260219110000_add_worker_heartbeats_table.py  20260219120000_add_jobs_archived_at.py
docs/: _index.md  contract-ref-setup.md  download-positions.md  execute-future-cl-order-script.md  secrets-using-1password.md  spec-installable-internal-app-layout.md  spec-mastra-chat-service-split.md  spec-trades-and-executions-sync.md  tradebot-chatbot.md  tradebot-langgraph-implementation.md  tradebot-workers.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AccountsTable.tsx  JobsTable.tsx  (+6 more)
scripts/: check.py  download_positions.py  execute_cl_buy_or_sell_continous_market.py  fetch-cl-contracts.py  setup_db.py  test_tws_connection.py  work_jobs.py  work_order_queue.py
src/: models.py  schemas.py
src/api/: main.py
src/services/: cl_contracts.py  contract_lookup.py  contract_sync.py  ibkr_select_contracts.py  jobs.py  order_queue.py  position_sync.py  pretrade_checks.py  tradebot_agent.py  watchlist_instrument_sync.py  watchlist_quotes.py  worker_heartbeat.py
src/utils/: contract_display.py  env_vars.py  ibkr_account.py
(+7 files in other folders)
